# ringgem

./: Brewfile  Dockerfile  Taskfile.yaml  add_lines.py  apt-update.sh  apt-yum-update.sh  bash-customize-kubectl-on-linux.sh  configure-homebrew-on-linux.sh  deploy-dotfiles-on-linux.sh  filebeat-installation-configuration.html  gather_install_scripts.py  homebrew.k  insert_app_name_comment.py  install-allbranding-on-linux.sh  install-ansible-on-ubuntu.sh  install-ansible.sh  install-apt-utils-on-ubuntu.sh  install-arkade-on-linux.sh  install-atuin-on-linux.sh  install-awscli-on-linux.sh  install-awscli-on-ubuntu.sh  install-bash-completion-on-linux.sh  install-blesh-on-linux.sh  install-boilerplate-on-linux-and-macos.sh  install-brew-on-linux.sh  install-btrfs-progs-on-linux.sh  install-build-essential-on-ubuntu.sh  install-cakepalm-on-linux.sh  install-cakepalm-on-ubuntu.sh  install-cargo-binstall-on-linux-using-cargo.sh  install-cargo-on-linux.sh  install-chezmoi-on-linux.sh  install-chromadb-on-linux.sh  install-cilium-hubble-on-linux.sh  install-cilium-on-linux.sh  install-cloudeagle-on-linux.sh  install-cloudelf-on-linux.sh  install-cloudwatch-on-ubuntu.sh  install-clusterawsadm-on-linux.sh  install-clusterctl-on-linux.sh  (+135 more)
